--- a/app/src/main/res/layout/telainfo.xml
+++ b/app/src/main/res/layout/telainfo.xml
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="284dp"
+        android:layout_marginTop="320dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Voltar"
+        android:text="@string/buttonVoltar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
